@@ -510,8 +510,6 @@ class TestCase::Sys {
           return 0;
         }
         
-        warn Errno->errno;
-        
         unless (Errno->errno > 0) {
           return 0;
         }
